# semio_speech_ros

./: CMakeLists.txt  Readme.md  package.xml
launch/: speech_gen.launch  speech_rec.launch
